# stratasolutions_qualification

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
strata_sol_qualification/: Application.hpp  CMakeLists.txt  ControlBlock.hpp  ControlBlockMessage.hpp  MainWindow.hpp  Plot.hpp  Runner.hpp  RunnerMessage.hpp  main.cpp  utils.hpp
strata_sol_qualification/src/: ControlBlock.cpp  MainWindow.cpp  Plot.cpp  Runner.cpp
strata_sol_qualification/ui/: ControlBlock.ui  MainWindow.ui
